[gd_scene load_steps=13 format=2]

[ext_resource path="res://MainScenes/Battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://MainScenes/Battle/Background.gd" type="Script" id=2]
[ext_resource path="res://UI/Assets/Battle/b_sky.png" type="Texture" id=3]
[ext_resource path="res://UI/Assets/Battle/b_mountains.png" type="Texture" id=4]
[ext_resource path="res://UI/Assets/Battle/b_trees_background.png" type="Texture" id=5]
[ext_resource path="res://UI/Assets/Battle/b_tree_back.png" type="Texture" id=6]
[ext_resource path="res://UI/Assets/Battle/b_grass_battlezone.png" type="Texture" id=7]
[ext_resource path="res://UI/Assets/Battle/b_grass_front.png" type="Texture" id=8]
[ext_resource path="res://UI/Assets/Battle/b_grass_foreground.png" type="Texture" id=9]
[ext_resource path="res://UI/Assets/Battle/b_trees_foreground.png" type="Texture" id=10]
[ext_resource path="res://MainScenes/GameCamera.tscn" type="PackedScene" id=11]
[ext_resource path="res://MainScenes/Battle/BattleCamera.gd" type="Script" id=12]

[node name="Battle" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="Background"]
position = Vector2( 320, 0 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 640, 180 )

[node name="Sprite2" type="Sprite" parent="Background"]
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 840, 180 )

[node name="Sprite3" type="Sprite" parent="Background"]
position = Vector2( 100, 0 )
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1000, 180 )

[node name="Sprite4" type="Sprite" parent="Background"]
position = Vector2( 60, 0 )
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 960, 180 )

[node name="Sprite5" type="Sprite" parent="Background"]
position = Vector2( 270, 0 )
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 840, 180 )

[node name="Sprite6" type="Sprite" parent="Background"]
position = Vector2( 112, 0 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 960, 180 )

[node name="Sprite7" type="Sprite" parent="Background"]
position = Vector2( 320, 0 )
texture = ExtResource( 9 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 960, 180 )

[node name="Sprite8" type="Sprite" parent="Background"]
position = Vector2( 560, 0 )
texture = ExtResource( 10 )
centered = false

[node name="BattleCamera" parent="." instance=ExtResource( 11 )]
editor/display_folded = true
position = Vector2( 0, 90 )
anchor_mode = 0
smoothing_enabled = false
script = ExtResource( 12 )


[editable path="BattleCamera"]
